# ChangeLog for catalyst
# Copyright 2002-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2

  13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> TODO:
  Add procedure for 'system' target

  13 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> M:
  TODO updates: add information about verification of
  seeds/caches/configs/specs, update automated actions section in targets, add
  all-stages and all-images target information, clean up system and world
  target information, add information on improving caching/resuming, move
  mixed host/target information into targets section, add information on
  replacing livecd-tools (hwdata/libkudzu/hwsetup) with internal code, and
  fixing the spacing.

  13 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> M:
  TODO updates: added section on statistics gathering/reporting, added section
  on (potential) new targets, and update boot loader section.

  13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/embedded.py, modules/catalyst/target/generic.py,
  modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
  modules/catalyst/target/livecd_stage1.py,
  modules/catalyst/target/livecd_stage2.py,
  modules/catalyst/target/netboot.py, modules/catalyst/target/stage1.py,
  modules/catalyst/target/stage2.py, modules/catalyst/target/stage3.py,
  modules/catalyst/target/stage4.py, modules/catalyst/target/tinderbox.py:
  Remove all references to 'spec' and 'addlargs' in target modules

  13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/config.py:
  All targets have been updated not to use the spec_prefix, so we don't need
  to save the prefixed keys anymore

  13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  modules/catalyst/target/generic_stage.py,
  modules/catalyst/target/snapshot.py:
  Don't pass conf_values or addlargs to target __init__()

  13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>